@@ -1,5 +1,11 @@
 2014-11-05
 
+	* libsylph/prefs_common.[ch]
+	  src/prefs_common_dialog.c
+	  src/mainwindow.c: added an option to specify startup online mode.
+
+2014-11-05
+
 	* src/mainwindow.c: only apply r3427 to win32 because it breaks
 	  the function on some window managers.
 
